# job

./: .env.example  .gitignore  ADOBE_BG_REMOVAL_SETUP.md  DOCS_INDEX.md  IMPLEMENTATION_SUMMARY.md  ONE_MAN_MARKETING_SYSTEM.md  PRODUCT_CACHE_SYSTEM.md  PRODUCT_DATA_COMPLETE.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  TRENDING_SOCIALS.md  VISUAL_CONTENT_FACTORY_PLAN.md  VISUAL_FACTORY_EXECUTION_HANDOFF.md  VISUAL_POST_FACTORY_PLAYBOOK.md  ZPRAVA_PRO_SEFA.md  eslint.config.mjs  fps-kalkulacka  next.config.mjs  package-lock.json  package.json  products (1).csv  tailwind.config.ts  tsconfig.json  vitest.config.ts
data/: products-cache.json  social-publish-batches.json  top20-priority-skus.csv  visual-post-factory-batch-v1.csv  visual-post-photo-batch-v1.csv  visual-post-photo-schema.csv
docs-archive/: ARCHIVE_INDEX.md  BRAND_VISUAL_SPEC.md  COMPLETION_REPORT.md  DOCS_INDEX.md  ONE_MAN_MARKETING_SYSTEM.md  PRODUCT_CACHE_SYSTEM.md  README.md  SHOPTET_INTEGRATION.md  SOCIAL_STRATEGY_MASTERY.md  SYSTEM_PROFILE.md  TRENDING_SOCIALS_QUICKSTART.md  VISUAL_CONTENT_FACTORY_PLAN.md  post generate.md
fps-calculator/: VYBRE ZA VAS -FPS KALKULACKA  Vybereme za vás herní PC! - HelloComp.html  agent-instructions-explain-idea.md  fpsapicomp.js  view-source_https___www.hellocomp.cz_vybereme-za-vas-herni-pc_.html
prisma/: schema.prisma
public/: photo-generator.html  products-all.csv
scripts/: analyze-products.py  audit-data.js  heureka-to-json.py  sync-products-cache.ts  sync-products.ts
tools/content-automation/: README.md  pyproject.toml
tools/content-automation/content_automation/: __init__.py  cli.py  csv_loader.py  hookmaster.py  lootbox_seo.py  models.py  omnichannel.py  trending_socials.py
tools/content-automation/tests/: test_csv_loader.py  test_hookmaster.py  test_lootbox_seo.py  test_models.py  test_omnichannel.py
(+64 files in other folders)
